fixed alignment of todo card

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -92,7 +92,6 @@ hr {
 .icons {
 	display: flex;
 	flex-direction: column;
-	margin-left: 190px;
 }
 
 .todo-info {
@@ -126,6 +125,7 @@ hr {
 	padding: 20px;
 	margin-bottom: 20px;
 	display: flex;
+	justify-content: space-between;
 	width: 424px;
 	margin-left: 20px;
 	margin-right: 20px;
